--- a/views/search.erb
+++ b/views/search.erb
@@ -27,6 +27,20 @@
   <link rel="stylesheet" media="screen" type="text/css" href="<%= uri('/css/bootstrap.modal.css', false) %>" />
   <link rel="stylesheet" media="screen" type="text/css" href="<%= uri('/css/bootstrap.icons.css', false) %>" />
   <link rel="stylesheet" media="screen" type="text/css" href="<%= uri('/css/custom.css', false) %>" />
+
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-471841-4']);
+    _gaq.push(['_setDomainName', 'none']);
+    _gaq.push(['_setAllowLinker', true]);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 </head>
 
 <body>
