--- a/views/search.erb
+++ b/views/search.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>SequenceServer: Custom BLAST Server</title>
+  <title>Fourmidable: BLAST ant genomes, proteomes, and transcriptomes.</title>
   <meta name="author" content="Anurag Priyam" />
   <meta name="author" content="Ben J. Woodcroft" />
   <meta name="author" content="Yannick Wurm" />
   <meta name="author" content="Cedric Wurm" />
-  <meta name="description" content="Custom BLAST server provided by SequenceServer (http://www.sequenceserver.com)"/>
+  <meta name="description" content="BLAST search for ant genome sequences. A simple blast interface to search sequence of recently published ant genome."/>
+  <meta name="keywords" content="ant genomes, blast search, fire ant genome, harvester ant genome, leafcutter ant genome, camponotus genome, harpegnathos genome."/>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
   <script type="text/javascript" src="<%= uri('/js/store.min.js', false) %>"></script>
   <script type="text/javascript" src="<%= uri('/js/jquery.js', false) %>"></script>
@@ -42,7 +43,7 @@
 
     <div class="page">
       <div id="banner">
-        <h1>BLAST Sequence(s)</h1>
+        <h1>BLAST Ant Genomes(s)</h1>
       </div>
 
       <form method="post" id="blast" action="<%= uri('/#result', false) %>">
@@ -170,16 +171,8 @@
       </div>
 
       <div id="underbar">
-        <p><strong><a href='http://www.sequenceserver.com'>
-            <%=  [ "&copy; SequenceServer: BLAST search made easy!",
-                   "Custom BLAST web interface by SequenceServer.",
-                   "SequenceServer: Local BLAST with bespoke html interface.",
-                   "Set up custom BLAST interface with SequenceServer.",
-                   "Please cite: Priyam A, Woodcroft BJ, Wurm Y (<em>in prep</em>). " +
-                   "Sequenceserver: BLAST searching made easy."
-            ][rand(5)]
-          %>
-        </a></strong></p>
+        <p><a href="http://www.isb-sib.ch"><img src="http://antgenomes.org/img/sib120x74.png" width="40" height="25" alt="SIBlogo"/></a> Hosted by the Swiss Institute of Bioinformatics. BLAST search by <a href="http://www.sequenceserver.com">SequenceServer</a>.</p>
+        <p>Please cite: <a href="http://www.biomedcentral.com/1471-2164/10/5/abstract">Wurm <em>et al</em> (2009) <strong>Fourmidable: a database for ant genomics.</strong> <em>BMC Genomics</em> 10:5</a> and the appropriate ant genome paper(s).</p>
       </div>
     </div> <!-- /page -->
   </div> <!-- /container -->
