improved error handling for advanced parameters (#14)
Using OptSpec (introduced in previous commit).

Signed-off-by: Anurag Priyam <anurag08priyam@gmail.com>

--- a/views/search.erb
+++ b/views/search.erb
@@ -115,7 +115,7 @@
             <div class="offset-left box advanced">
               <div class="clearfix">
                 <label for="advanced">Advanced Parameters:</label>
-                <input class="span8" type="text" name="advanced" id="advanced" title="View, and enter advanced parameters." placeholder="eg: -evalue 1.0e-5 -num_alignments 100"/>
+                <input class="span8" type="text" name="advanced" id="advanced" title="View, and enter advanced parameters." placeholder="eg: evalue: 1.0e-5 num_alignments: 100"/>
                 <span class="icon-question-sign" data-toggle="modal" href="#help"></span>
               </div>
 
