import Bootstrap's typeahead JS plugin
Signed-off-by: Anurag Priyam <anurag08priyam@gmail.com>

--- a/views/search.erb
+++ b/views/search.erb
@@ -17,6 +17,7 @@
   <script type="text/javascript" src="<%= uri('/js/bootstrap.transition.js') %>"></script>
   <script type="text/javascript" src="<%= uri('/js/bootstrap.dropdown.js') %>"></script>
   <script type="text/javascript" src="<%= uri('/js/bootstrap.modal.js') %>"></script>
+  <script type="text/javascript" src="<%= uri('/js/bootstrap.typeahead.js') %>"></script>
   <script type="text/javascript" src="<%= uri('/js/sequenceserver.js') %>"></script>
   <script type="text/javascript" src="<%= uri('/js/sequenceserver.blast.js') %>"></script>
 
