Fix reverse-proxy deployment quirks.
Instruct `Sinatra::Base#uri` to generate URIs taking only `SCRIPT_NAME` into
account, i.e. use absolute path to the asset relative to the server name.
Previously SS would prefix the server name to the path too.  However, depending
on how SS is deployed, using absolute URIs, including server name, for assets
may or may not work.  And even if it does, not a good strategy in my opinion.
For example, if one has SS running on localhost:4567 (default) an example asset
URI would be 'http://127.0.0.1:4567/css/sequenceserver.css'.  This will fail
for public SS installations.  One could use public IP of her server, then the
same asset URI might look like
'http://130.223.48.66:4567/css/sequenceserver.css'.  Now port 4567 must be
open for this to work.  And so on.  Using absolute path relative to server
name works and looks to me like it would work on most setup without hassle.

Signed-off-by: Anurag Priyam <anurag08priyam@gmail.com>

--- a/views/500.erb
+++ b/views/500.erb
@@ -9,7 +9,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 
     <%# without a space after erb's closing tag, a / gets appended to css' path %>
-    <link rel="stylesheet" media="screen" type="text/css" href=<%= uri('/css/beige.css') %> />
+    <link rel="stylesheet" media="screen" type="text/css" href=<%= uri('/css/beige.css', false) %> />
 </head>
 
 <body>
