--- a/views/search.erb
+++ b/views/search.erb
@@ -185,7 +185,7 @@
       </div>
 
       <div id="underbar">
-        <p><a href="http://www.isb-sib.ch"><img src="http://antgenomes.org/img/sib120x74.png" width="40" height="25" alt="SIBlogo"/></a> Hosted by the Swiss Institute of Bioinformatics. BLAST search by <a href="http://www.sequenceserver.com">SequenceServer</a>.</p>
+        <p>Hosted by <a href="http://www.qmul.ac.uk">Queen Mary, University of London</a>. BLAST search by <a href="http://www.sequenceserver.com">SequenceServer</a>.</p>
         <p>Please cite: <a href="http://www.biomedcentral.com/1471-2164/10/5/abstract">Wurm <em>et al</em> (2009) <strong>Fourmidable: a database for ant genomics.</strong> <em>BMC Genomics</em> 10:5</a> and the appropriate ant genome paper(s).</p>
       </div>
     </div> <!-- /page -->
