Show quick BLAST shortcut in title
Signed-off-by: Vivek Rai <vivekraiiitkgp@gmail.com>

--- a/views/search.erb
+++ b/views/search.erb
@@ -237,6 +237,7 @@
                 <button
                   type="submit"
                   id="method" class="btn btn-default"
+                  title="Use Ctrl+Enter as shortcut."
                   disabled="disabled">
                   blast
                 </button>
