--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -287,11 +287,20 @@ body {
   text-align: center;
 }
 
+svg:not(:root) {
+  overflow: visible;
+}
+
 .axis path,
 .axis line {
-    fill: red;
-    stroke: #fff;
+    fill: none;
+    stroke: #f00;
+    stroke-width: 2px;
     shape-rendering: crispEdges;
+}
+
+.axis path {
+  stroke-width: 3px;
 }
 
 .dnd-overlay {
