Remove Bootstrap's CSS properties from pre tag for sequence-viewer
Signed-off-by: Vivek Rai <vivekraiiitkgp@gmail.com>

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -109,6 +109,12 @@ body {
 .biojs-vis-sequence pre {
   max-height: 340px;
   overflow-y: scroll;
+  background-color: #ffe;
+  word-break: normal;
+  word-wrap: normal;
+  padding: 0px;
+  margin: 0px;
+  border: none;
 }
 
 .notifications {
