--- a/views/search.erb
+++ b/views/search.erb
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>SequenceServer: Custom BLAST Server</title>
+  <title>Fourmidable: BLAST ant genomes, proteomes, and transcriptomes.</title>
   <meta name="author" content="Anurag Priyam">
   <meta name="author" content="Ben J. Woodcroft">
   <meta name="author" content="Vivek Rai">
@@ -33,24 +33,9 @@
     class="navbar">
     <div
       class="container">
-      <a
-        class="navbar-brand"
-        href="http://sequenceserver.com" target="_blank">
-        SequenceServer
-        <small>
-          <%= SequenceServer::VERSION %>
-        </small>
-      </a>
-      <ul class="nav navbar-nav navbar-right hover-reset focus-reset">
-        <li>
-          <a
-            target="_blank"
-            href="http://www.sequenceserver.com/#support">
-            <i class="fa fa-comment-o"></i>
-            Help &amp; Support
-          </a>
-        </li>
-      </ul>
+      <h1 class="navbar-brand" style="text-align: center; width: 100%">
+       BLAST Ant Genomes(s)
+     </h1>
     </div>
   </div>
 
@@ -276,39 +261,33 @@
   <div
     class="footer" id="footer">
     <hr>
-    <p
-      class="text-center">
-      <a
-        href='http://www.sequenceserver.com'>
-        <%=
-          quote = [
-            "Custom BLAST web interface by SequenceServer.",
-            "SequenceServer: Local BLAST with bespoke html interface.",
-            "Set up custom BLAST interface with SequenceServer.",
-            "Easy BLASTing with SequenceServer.",
-            "Run BLAST locally with Sequenceserver.",
-            "BLAST against a custom, local database with SequenceServer.",
-            "Run BLAST locally on Mac OSX with SequenceServer.",
-            "Run BLAST locally on Ubuntu with SequenceServer.",
-            "Run BLAST locally on Linux with SequenceServer."
-          ][rand(9)]
-        %>
-      </a>
-      <a
-        class="twitter-share-button"
-        href="https://twitter.com/share"
-        data-url="http://www.sequenceserver.com" data-text="<%= quote %>" data-via="yeban" data-hashtags="bioinformatics">
-        Tweet
-      </a>
-      <%#<div class="g-plusone" data-annotation="none" data-href="http://www.sequenceserver.com"></div>%>
-
-      <br>
-      Please Cite:
-      <a href='http://www.sequenceserver.com'>
-        Priyam, Woodcroft, Rai & Wurm, <strong>SequenceServer</strong> (<em>in prep</em>)
-      </a>
-      &amp; relevant data sources.
+    <p class="text-center">
+      Hosted by <a href="http://www.qmul.ac.uk">Queen Mary, University of London</a>. BLAST search by <a href="http://www.sequenceserver.com">SequenceServer</a>.
     </p>
+      <p class="text-center">
+      Please cite: <a href="http://www.biomedcentral.com/1471-2164/10/5/abstract">Wurm <em>et al</em> (2009) <strong>Fourmidable: a database for ant genomics.</strong> <em>BMC Genomics</em> 10:5</a> and the appropriate ant genome paper(s).
+    </p>
+  </div>
+
+  <div id="social" class="modal hide fade">
+    <div class="modal-header">
+      <h3 id="error-short">Looks like you are fond of SequenceServer :).</h3>
+    </div>
+    <div class="modal-body">
+      <p>Please consider giving us a plus-one and/or tweeting about us. Thanks!</p>
+      <br/>
+      <div class="buttons">
+        <div class="button-container well">
+          <div class="g-plusone" data-annotation="none" data-href="http://www.sequenceserver.com"></div>
+        </div>
+        <div class="button-container well">
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.sequenceserver.com" data-text="SequenceServer: BLAST search made easy." data-via="yeban" data-size="large" data-count="none" data-hashtags="bioinformatics">Tweet</a>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" data-dismiss="modal">Done</button>
+    </div>
   </div>
 
   <div
