--- a/views/search.erb
+++ b/views/search.erb
@@ -177,6 +177,8 @@
       <div
         class="form-group databases-container">
         <%# sort => same ordering of nucleotide and protein datbases %>
+        <% ignored_file = File.expand_path "#{File.dirname(__FILE__)}/../ignored_from_view.yaml" %>
+        <% ignored = YAML.load_file ignored_file %>
         <% databases.keys.sort.each do |type| %>
           <div
             class="<%= databases[(databases.keys - [type]).first] ? 'col-md-6' : 'col-md-12' %>">
@@ -189,15 +191,17 @@
               <ul
                 class="list-group databases <%= type %>">
                 <% databases[type].sort_by(&:title).each do |database| %>
-                  <li class="list-group-item">
-                    <div
-                      class="checkbox">
-                      <label>
-                        <input type="checkbox" name="databases[]" value="<%=database.id%>" data-type="<%=database.type%>" />
-                        <%= database.title or database.name %>
-                      </label>
-                    </div>
-                  </li>
+                  <% unless ignored.include? database.title %>
+                    <li class="list-group-item">
+                      <div
+                        class="checkbox">
+                        <label>
+                            <input type="checkbox" name="databases[]" value="<%=database.id%>" data-type="<%=database.type%>" />
+                            <%= database.title or database.name %>
+                        </label>
+                      </div>
+                    </li>
+                  <% end %>
                 <% end %>
               </ul>
             </div>
