--- a/views/search.erb
+++ b/views/search.erb
@@ -19,13 +19,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <% if settings.production? %>
     <link rel="stylesheet" media="screen,print" type="text/css" href="<%= uri('/dist/css/sequenceserver.min.css', false) %>"/>
-  <% else %>
-    <link rel="stylesheet" media="screen,print" type="text/css" href="<%= uri('/css/bootstrap.min.css', false) %>"/>
-    <link rel="stylesheet" media="screen,print" type="text/css" href="<%= uri('/css/custom.css', false) %>"/>
-    <link rel="stylesheet" media="screen,print" type="text/css" href="<%= uri('/css/font-awesome.min.css', false) %>"/>
-  <% end %>
 </head>
 
 <body>
@@ -34,7 +28,7 @@
     <div
       class="container">
       <h1 class="navbar-brand" style="text-align: center; width: 100%">
-       BLAST Ant Genomes(s)
+       BLAST Ant Genome(s)
      </h1>
     </div>
   </div>
@@ -420,20 +414,7 @@
   </div> <!-- sequence viewing -->
 
   <!-- JS -->
-  <% if settings.production? %>
     <script src="<%= uri('/dist/js/sequenceserver.min.js', false) %>"></script>
-  <% else %>
-    <script type="text/javascript" src="<%= uri('/js/underscore.min.css', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/jquery.min.js', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/jquery-ui.min.js', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/bootstrap.min.js', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/webshims/polyfiller.js', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/d3.v3.min.js', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/sequenceserver.js', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/sequenceserver.blast.js', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/jquery.t.js', false) %>"></script>
-    <script type="text/javascript" src="<%= uri('/js/sequence.js', false) %>"></script>
-  <% end %>
 
   <!-- twitter -->
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
