Update please cite line to include SequenceServer preprint.
Signed-off-by: Anurag Priyam <anurag08priyam@gmail.com>

--- a/views/search.erb
+++ b/views/search.erb
@@ -263,7 +263,13 @@
       Hosted by <a href="http://www.qmul.ac.uk">Queen Mary, University of London</a>. BLAST search by <a href="http://www.sequenceserver.com">SequenceServer</a>.
     </p>
       <p class="text-center">
-      Please cite: <a href="http://www.biomedcentral.com/1471-2164/10/5/abstract">Wurm <em>et al</em> (2009) <strong>Fourmidable: a database for ant genomics.</strong> <em>BMC Genomics</em> 10:5</a> and the appropriate ant genome paper(s).
+        Please cite:
+        <a href="http://www.biomedcentral.com/1471-2164/10/5/abstract">Wurm <em>et al.</em> (2009) <strong>Fourmidable: a database for ant genomics.</strong> <em>BMC Genomics</em> 10:5</a>
+        <br>
+        <a href="http://www.biorxiv.org/content/early/2015/11/27/033142">
+          Priyam <em>et al.</em> (2015) <strong>Sequenceserver: a modern graphical user interface for custom BLAST databases.</strong> <em>biorixv</em> doi: 10.1101/033142</a>
+        <br>
+        and the appropriate ant genome paper(s).
     </p>
   </div>
 
