Apocrita related changes.
Signed-off-by: Anurag Priyam <anurag08priyam@gmail.com>

--- a/views/search.erb
+++ b/views/search.erb
@@ -19,7 +19,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" media="screen,print" type="text/css" href="<%= uri('/dist/css/sequenceserver.min.css', false) %>"/>
+  <link rel="stylesheet" media="screen,print" type="text/css" href="css/sequenceserver.min.css"/>
 </head>
 
 <body>
@@ -260,7 +260,7 @@
     class="footer" id="footer">
     <hr>
     <p class="text-center">
-      Hosted by <a href="http://www.qmul.ac.uk">Queen Mary, University of London</a>. BLAST search by <a href="http://www.sequenceserver.com">SequenceServer</a>.
+      Hosted by <a href="http://www.qmul.ac.uk">Queen Mary University of London</a>. BLAST search by <a href="http://www.sequenceserver.com">SequenceServer</a>.
     </p>
       <p class="text-center">
         Please cite:
@@ -420,7 +420,7 @@
   </div> <!-- sequence viewing -->
 
   <!-- JS -->
-    <script src="<%= uri('/dist/js/sequenceserver.min.js', false) %>"></script>
+  <script src="js/sequenceserver.min.js"></script>
 
   <!-- twitter -->
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
