--- a/public/css/sequenceserver.css
+++ b/public/css/sequenceserver.css
@@ -404,25 +404,8 @@ input[name="advanced"] {
   margin-bottom: 0;
 }
 
-.hsps {
+.hsp {
   padding-bottom: 14px;
-}
-.hsp-stats>thead>tr>th {
-  border-bottom: none;
-  padding: 0;
-}
-.hsp-stats>tbody>tr>td {
-  padding: 0;
-  padding-bottom: 5px;
-  border-bottom: 1px solid #ddd;
-}
-
-.alignment {
-  margin-top: 8px;
-  white-space: pre;
-  font-family: monospace;
-  line-height: 12px;
-  letter-spacing: 1px;
 }
 
 .hit-links {
@@ -468,4 +451,19 @@ input[name="advanced"] {
   border-left: 2px solid #f0ad4e;
   padding-left: 16px;
   padding-right: 16px;
+}
+
+
+.viewer * {
+  display: inline-block;
+  font-size: 12px;
+}
+.viewer .header {
+  width: 100%;
+}
+.viewer .alnmnt {
+  letter-spacing: 1px;
+}
+.viewer .coords {
+  color: rgb(170, 170, 170);
 }
