--- a/public/css/grapher.css
+++ b/public/css/grapher.css
@@ -20,10 +20,7 @@ svg .bar:hover {
 }
 
 .grapher {
-  border: 1px solid #ddd;
-  border-radius: 12px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px 0 20px;
 }
 
 .caption {
